P4-Ch.01/istio/manifest/manifest-1/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo1
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo1
      version: v1
  template:
    metadata:
      labels:
        app: echo1
        version: v1
        istio: monitor
    spec:
      containers:
        - image: kowlon/go-echo:v1
          imagePullPolicy: Always
          name: echo1
          ports:
            - name: http
              containerPort: 8080
