P4-Ch.01/istio/manifest/manifest-1/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo1
  namespace: production
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: echo1
