P4-Ch.01/istio/manifest/manifest-1/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echo1
  namespace: production
spec:
  hosts:
    - echo1.apps.kowlon.my.id
    - echo1
  gateways:
    - istio-system/apps
  http:
    - match: 
        - uri:
            prefix: /  
      route:
        - destination:
            port:
              number: 8080
            host: echo1
